--- a/index.html
+++ b/index.html
@@ -65,21 +65,6 @@
         border-color: #2563eb;
         outline: none;
       }
-      button {
-        width: 100%;
-        padding: 0.75rem;
-        background: linear-gradient(90deg, #3b82f6, #2563eb);
-        color: white;
-        border: none;
-        border-radius: 12px;
-        font-size: 1rem;
-        cursor: pointer;
-        transition: background 0.3s, transform 0.2s;
-      }
-      button:hover {
-        background: linear-gradient(90deg, #2563eb, #1e40af);
-        transform: translateY(-2px);
-      }
       .footer {
         margin-top: 2rem;
         font-size: 0.875rem;
@@ -118,35 +103,34 @@
         font-size: 1rem;
         color: #6b7280;
       }
-      .delete-button {
-        color: red;
-        cursor: pointer;
-        font-weight: bold;
-      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="header">Logistics Class</div>
       <h1>Assignment Submission</h1>
-      <form id="assignmentForm">
-        <label for="link">Assignment Link *</label>
-        <input
-          type="url"
-          id="link"
-          name="link"
-          required
-          placeholder="Enter assignment link"
-        />
-
-        <button type="submit">Submit Assignment</button>
-      </form>
-
+      
       <div class="files">
         <h2>Uploaded Assignments:</h2>
         <ul id="fileList">
-          <p id="noFiles">Assignments haven't been uploaded yet.</p>
+          <!-- Here you manually add new links -->
+          <li>
+            <a href="https://example.com/assignment1" target="_blank">
+              Assignment 1
+            </a>
+          </li>
+          <li>
+            <a href="https://example.com/assignment2" target="_blank">
+              Assignment 2
+            </a>
+          </li>
+          <li>
+            <a href="https://example.com/assignment3" target="_blank">
+              Assignment 3
+            </a>
+          </li>
         </ul>
+        <p>If you need to add or change a link, modify the HTML code directly.</p>
       </div>
 
       <div class="footer">
@@ -155,66 +139,5 @@
         </p>
       </div>
     </div>
-
-    <script>
-      const assignmentForm = document.getElementById("assignmentForm");
-      const fileList = document.getElementById("fileList");
-      const noFilesMessage = document.getElementById("noFiles");
-
-      function displayUploadedFiles() {
-        const uploadedData =
-          JSON.parse(localStorage.getItem("uploadedData")) || [];
-
-        fileList.innerHTML = "";
-        if (uploadedData.length > 0) {
-          noFilesMessage.style.display = "none";
-          uploadedData.forEach((item, index) => {
-            const listItem = document.createElement("li");
-
-            const link = document.createElement("a");
-            link.href = item.link;
-            link.target = "_blank";
-            link.textContent = item.name;
-
-            const deleteButton = document.createElement("span");
-            deleteButton.textContent = " [Delete]";
-            deleteButton.classList.add("delete-button");
-            deleteButton.onclick = () => deleteAssignment(index);
-
-            listItem.appendChild(link);
-            listItem.appendChild(deleteButton);
-            fileList.appendChild(listItem);
-          });
-        } else {
-          noFilesMessage.style.display = "block";
-        }
-      }
-
-      function deleteAssignment(index) {
-        const uploadedData =
-          JSON.parse(localStorage.getItem("uploadedData")) || [];
-        uploadedData.splice(index, 1);
-        localStorage.setItem("uploadedData", JSON.stringify(uploadedData));
-        displayUploadedFiles();
-      }
-
-      assignmentForm.addEventListener("submit", function (event) {
-        event.preventDefault();
-
-        const link = document.getElementById("link").value;
-        const name = prompt("Please enter the assignment title:");
-
-        if (name) {
-          const uploadedData =
-            JSON.parse(localStorage.getItem("uploadedData")) || [];
-          uploadedData.push({ name, link });
-          localStorage.setItem("uploadedData", JSON.stringify(uploadedData));
-          assignmentForm.reset();
-          displayUploadedFiles();
-        }
-      });
-
-      displayUploadedFiles();
-    </script>
   </body>
 </html>
