--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
         <ul id="fileList">
           <!-- Here you manually add new links -->
           <li>
-            <a href="https://example.com/assignment1" target="_blank">
+            <a href="#" target="_blank">
               Assignment 1
             </a>
           </li>
           <li>
-            <a href="https://example.com/assignment2" target="_blank">
+            <a href="#" target="_blank">
               Assignment 2
             </a>
           </li>
           <li>
-            <a href="https://example.com/assignment3" target="_blank">
+            <a href="#" target="_blank">
               Assignment 3
             </a>
           </li>
