--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <ul id="fileList">
           <!-- Here you manually add new links -->
           <li>
-            <a href="#" target="_blank">
-              Assignment 1
+            <a href="https://davlatjanov.github.io/flowchart-/" target="_blank">
+              FlowChart
             </a>
           </li>
           <li>
