--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
             </a>
           </li>
           <li>
-            <a href="#" target="_blank">
+            <a href="#" >
               Assignment 2
             </a>
           </li>
           <li>
-            <a href="#" target="_blank">
+            <a href="#" >
               Assignment 3
             </a>
           </li>
