--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
             </a>
           </li>
           <li>
-            <a href="#" >
-              Assignment 2
+            <a href="https://davlatjanov.github.io/procurement_analyses-/" >
+              Procurement Analytics
             </a>
           </li>
           <li>
