--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </a>
           </li>
           <li>
-            <a href="https://davlatjanov.github.io/procurement_analyses/" >
+            <a href="https://davlatjanov.github.io/procurement_analyses/" target="_blank">
               Procurement Analytics
             </a>
           </li>
