--- a/index.html
+++ b/index.html
@@ -256,17 +256,17 @@
           <!-- Here you manually add new links -->
           <li>
             <a href="https://davlatjanov.github.io/flowchart-/" target="_blank">
-              FlowChart
+              Week-3 Logistics Flowchart Builder
             </a>
           </li>
           <li>
             <a href="https://davlatjanov.github.io/procurement_analyses/" target="_blank">
-              Procurement Analytics
+              Week-4 Analyzing Lead Time and Bullwhip Effect
             </a>
           </li>
           <li>
-            <a href="#" >
-              Assignment 3
+            <a href="https://davlatjanov.github.io/TSP-Game/" target="_blank" >
+              Week-5 TSP Game: The Route Challenge
             </a>
           </li>
         </ul>
