--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           </li>
           <li>
             <a href="https://davlatjanov.github.io/TSP-Game/" target="_blank" >
-              Week-5 TSP Game: The Route Challenge
+              TSP Game: The Route Challenge
             </a>
           </li>
         </ul>
