--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
               TSP Game: The Route Challenge
             </a>
           </li>
+          <li>
+            <a href="" target="_blank" >
+             Design Thinking
+            </a>
+          </li>
         </ul>
         <p>If you need to add or change a link, modify the HTML code directly.</p>
       </div>
