--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </a>
           </li>
           <li>
-            <a href="" target="_blank" >
+            <a href="https://davlatjanov.github.io/designThinking/" target="_blank" >
              Design Thinking
             </a>
           </li>
