--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
             <a href="https://davlatjanov.github.io/designThinking/" target="_blank" >
              Design Thinking
             </a>
+            <a href="https://docs.google.com/spreadsheets/d/11IqhBp-9NNNV76JdvQlZvvHAPey5W_jdlLBw4DtFVqE/edit?usp=sharing" target="_blank"> ABC Classification (spread sheet)
+            </a>
           </li>
         </ul>
         <p>If you need to add or change a link, modify the HTML code directly.</p>
