--- a/index.html
+++ b/index.html
@@ -273,8 +273,13 @@
             <a href="https://davlatjanov.github.io/designThinking/" target="_blank" >
              Design Thinking
             </a>
+          </li>
+          <li>
             <a href="https://docs.google.com/spreadsheets/d/11IqhBp-9NNNV76JdvQlZvvHAPey5W_jdlLBw4DtFVqE/edit?usp=sharing" target="_blank"> ABC Classification (spread sheet)
             </a>
+          </li>
+          <li>
+            <a href="https://davlatjanov.github.io/ABC_Classification_Tool/" target="_blank">ABC Classification Tool </a>
           </li>
         </ul>
         <p>If you need to add or change a link, modify the HTML code directly.</p>
