--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
           <li>
             <a href="https://davlatjanov.github.io/ABC_Classification_Tool/" target="_blank">ABC Classification Tool </a>
           </li>
+          <li>
+            <a href="https://docs.google.com/document/d/1-sFkYE1Tp98fbWq5ZHF14m-cTiJXxUsJnBYEQbAh-fY/edit?usp=sharing" target="_blank">Generalizing Slotting Strategy
+            </a>
+          </li>
         </ul>
         <p>If you need to add or change a link, modify the HTML code directly.</p>
       </div>
