--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </a>
           </li>
           <li>
-            <a href="https://davlatjanov.github.io/designThinking/" target="_blank" >
+            <a href="https://docs.google.com/document/d/1CMkCjZpp155gXs3_QtDZ_9SpJRKvZv_DGOuZcddYmlI/edit?usp=sharing/" target="_blank" >
              Design Thinking
             </a>
           </li>
