--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
         <ul id="fileList">
           <!-- Here you manually add new links -->
           <li>
+            <a href="https://docs.google.com/document/d/1ViaUUk_QnNFedYYFw8Nzqoqij00VnT4Mc5M8O5b-998/edit?usp=sharing" target="_blank">
+              Week-2: DHL Express Global Logistics Process
+            </a>
+          </li>
+          <li>
             <a href="https://davlatjanov.github.io/flowchart-/" target="_blank">
               Week-3 Logistics Flowchart Builder
             </a>
