--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <a href="https://davlatjanov.github.io/ABC_Classification_Tool/" target="_blank">ABC Classification Tool </a>
           </li>
           <li>
-            <a href="https://docs.google.com/document/d/1-sFkYE1Tp98fbWq5ZHF14m-cTiJXxUsJnBYEQbAh-fY/edit?usp=sharing" target="_blank">Generalizing Slotting Strategy
+            <a href="https://docs.google.com/document/d/1-sFkYE1Tp98fbWq5ZHF14m-cTiJXxUsJnBYEQbAh-fY/edit?usp=sharing" target="_blank">Generalizing the Slotting Problem from LAB 12
             </a>
           </li>
           <li>
